bug-068758 - Toggle buttons are not properly visible when the field heading size is increased on the product setup page on the seller end

--- a/dashboard/views/scss/pages/_setting.scss
+++ b/dashboard/views/scss/pages/_setting.scss
@@ -190,10 +190,11 @@
         flex-direction: row-reverse;
         flex: 1;
         width: 100%;
-
-        .input-helper {
+        input {
             flex: 0 0 40px;
-            margin: 0 !important;
+        }
+        .input-helper {
+            display: none;
         }
     }
     &:hover {
